--- a/index.html
+++ b/index.html
@@ -101,12 +101,7 @@
         <div class="frame"><img src="res/frm/tv.png" alt="" /></div>
         <div class="vid">
           <video
-            src="res/vid/tv.m4v"
-            autoplay
-            loop
-            mute
-            style="position: relative; top: -5px"
-          ></video>
+            src="res/vid/tv.m4v" autoplay loop mute style="position: relative; top: -5px"></video>
         </div>
       </div>
     </div>
